Ported HTTP requesting code to URLConnection